# AdvancedVoiceChat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
Docs/: mixingmatrix.txt
Webserver/: Site.py  Testsite.py  client.js  groupview.html  index.html  login.html  site.py  test.html
Webserver/static/: client.js  main.js
Webserver/templates/: index.html  login.html  test.html
src/: BufferTesting.cpp  CMakeLists.txt  MatrixTest.cpp  RingBuffer.hpp  audioBuffer.hpp  client.hpp  main.cpp  main2.cpp  mixingMatrix.cpp  mixingMatrix.hpp
